--- a/jatek_tortenet.html
+++ b/jatek_tortenet.html
@@ -7,12 +7,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Játékok története</title>
         <link rel="stylesheet" href="index.css">
+
+        <style>
+        </style>
+
     </head>
 
     <body>
+
+        <div id="topnav">
+            <a href="index.html">Kezdőlap</a>
+            <a href="mufajok.html">Műfajok</a>
+            <a href="onlinejatekok.html">Online játékok</a>
+            <a href="sikeres.html">Sikeres játékok</a>
+            <a href="speedrunok.html">Speedrunok</a>
+            <a href="videojatekok.html">Videójátékok</a>
+        </div>
+           <hr>
+
         <div class="tortenetkep">
             <img src="images/tennis_for_two.jpg" alt="Tennis for two">
-            <div class="tortenetkepszove">
+            <div class="tortenetkepszoveg">
                 Tennis for two
             </div>
         </div>
@@ -44,7 +59,7 @@
                     Alexander S. Douglas,
                     <div class="tortenetkep">
                         <img src="images/Spacewar.jpg" alt="Spacewar"> <br>
-                        <div class="tortenetkepszove">
+                        <div class="tortenetkepszoveg">
                             Spacewar
                         </div>
                     </div>
@@ -90,7 +105,7 @@
         </p>
         <div class="tortenetkep">
             <img src="images/Joystick.png" alt="">
-            <div class="tortenetkepszove">
+            <div class="tortenetkepszoveg">
 
             </div>
         </div>
@@ -114,7 +129,7 @@
         </p><br><br><br>
         <div class="tortenetkep">
             <img src="images/Pong_Game.gif" alt="">
-                <div class="tortenetkepszove">
+                <div class="tortenetkepszoveg">
                         
                 </div>
         </div>
