--- a/mufajok.html
+++ b/mufajok.html
@@ -7,9 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Műfajok</title>
     <link rel="stylesheet" href="index.css">
+
+    <style>
+        img{
+            width: 400px;
+        }
+        .kep {
+            margin-left: 90rem;
+        }
+        .li_elem{
+            margin-right: 400px;
+        }
+    </style>
+
 </head>
 
 <body>
+
+    <div id="topnav">
+        <a href="index.html">Kezdőlap</a>
+        <a href="jatek_tortenet.html">Játék történet</a>
+        <a href="onlinejatekok.html">Online játékok</a>
+        <a href="sikeres.html">Sikeres játékok</a>
+        <a href="speedrunok.html">Speedrunok</a>
+        <a href="videojatekok.html">Videójátékok</a>
+        <hr>
+    </div>
+
+
     <h1>Műfajok</h1>
     <p>Mint a média legtöbb formája. A videójátékok is különböző műfajokba sorolhatóak számos különböző jellemvonás
         alapján, mint a játékmenet, a célok fajtái stb. A játékok fejlődésével a műfajok is változtak az idők folyamán,
@@ -20,169 +45,247 @@
         az akciót és a szerepjátékot, egy stratégiai játékban a valós idejű stratégiát csatákban és körökre osztott
         stratégiát egy világtérképen.</p>
     <p>A műfaj megnevezésénél általában az angol rövidítését használják.</p>
-    <p>
-    <h2>Akció</h2>
-    </p>
     <ul>
         <li>
             <p>
-            <h2>FPS</h2>:
-            (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol a játékos az
-            általa irányított figura szemszögéből látja a játékban történteket.
+            <h2>Akció</h2>
             </p>
-        </li>
-        <li>
-            <p>
-            <h2>TPS</h2>
-            (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek általában
-            fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
-            </p>
-        </li>
-        <li>
-            <p>
-            <h2>Oldalnézetes akciójáték:</h2>
-            Klasszikus, 2D-s megjelenítési módot használó játék.
-            </p>
+            <ul>
+                <li>
+                    <div class="li_elem">
+                        <h2>FPS</h2>
+                        (First Person Shooter) vagy belső nézetű lövöldözős játék olyan lövöldözős videójáték, ahol a
+                        játékos az
+                        általa irányított figura szemszögéből látja a játékban történteket.
+                        <div class="kep">
+                            <img src="images/fps.gif" alt="">
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="li_elem">
+                        <p>
+                        <h2>TPS</h2>
+                        (Third-person shooter) külső nézetű lövöldözős játék, melyben az irányított karakternek általában
+                        fedezékről-fedezékre haladva kell leszámolnia ellenfeleivel.
+                    </p>
+                    <div class="kep">
+                        <img src="images/tps.jpg" alt="">
+                    </div>
+                    </div>
+                </li>
+                <li>
+                    <p>
+                    <h2>Oldalnézetes akciójáték:</h2>
+                    Klasszikus, 2D-s megjelenítési módot használó játék.
+                    </p>
+                </li>
+            </ul>
         </li>
     </ul>
-    <p>
-    <h2>Ügyességi</h2>
-    </p>
     <ul>
         <li>
             <p>
-            <h2>Platformer:</h2> az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és
-            platformok közti ugrálással / haladással kell eljutnia a pálya végéig. Az egyes pályák során különböző
-            érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.</p>
-            <p>
+            <h2>Ügyességi</h2>
+            </p>
+            <ul>
+                <li>
+                    <p>
+                    <h2>Platformer:</h2> az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és
+                    platformok közti ugrálással / haladással kell eljutnia a pálya végéig. Az egyes pályák során
+                    különböző
+                    érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.
+                    </p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>
+                    <h2>Kaland</h2>
+                    </p>
+            </ul>
         </li>
     </ul>
-    <h2>Kaland</h2>
-    </p>
-    <p>
-    <h2>Szerepjátékok</h2>
-    </p>
     <ul>
         <li>
             <p>
-            <h2>MMORPG:</h2>
-            (Massively Multiplayer Online Role-Playing Game – nagyon sok szereplős online szerepjáték) interneten,
-            online játszható szerepjáték. Sok ezer ember játszik egyszerre egy 2D vagy 3D világban, képességeket
-            fejlesztenek, szörnyek ellen harcolnak egyedül vagy többen, közben kereskednek. A lehetőségek tárháza
-            végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars, Roblox.
+            <h2>Szerepjátékok</h2>
             </p>
-        </li>
-        <li>
-            <p>
-            <h2>RPG:</h2>
-            (Role-Playing Game) Az MMORPG-hez hasonló játékelemekkel és játékmenettel rendelkezik, ám ezt legtöbbször
-            egyedül játszhatjuk offline módban (Pl. The Witcher sorozat), de akad néhány olyan is, ahol pár barátunkkal
-            vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
-            </p>
+            <ul>
+                <li>
+                    <p>
+                    <h2>MMORPG:</h2>
+                    (Massively Multiplayer Online Role-Playing Game – nagyon sok szereplős online szerepjáték)
+                    interneten,
+                    online játszható szerepjáték. Sok ezer ember játszik egyszerre egy 2D vagy 3D világban, képességeket
+                    fejlesztenek, szörnyek ellen harcolnak egyedül vagy többen, közben kereskednek. A lehetőségek
+                    tárháza
+                    végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars,
+                    Roblox.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>RPG:</h2>
+                    (Role-Playing Game) Az MMORPG-hez hasonló játékelemekkel és játékmenettel rendelkezik, ám ezt
+                    legtöbbször
+                    egyedül játszhatjuk offline módban (Pl. The Witcher sorozat), de akad néhány olyan is, ahol pár
+                    barátunkkal
+                    vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
+                    </p>
+                </li>
+            </ul>
         </li>
     </ul>
-    <h2>Stratégiai játékok</h2>
-    </p>
     <ul>
         <li>
             <p>
-            <h2>Valós idejű stratégia:</h2>
-            (real time strategy, rövidítve RTS) valós időben zajlanak, a játékmenet folyamatos, az összes játékos
-            bármikor adhat ki parancsokat, amelyek végrehajtása azonnal el is kezdődik. Az átlagos RTS-ekben a fő
-            feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek irányítása.
+            <h2>Stratégiai játékok</h2>
             </p>
-        </li>
-        <li>
+            <ul>
+                <li>
+                    <p>
+                    <h2>Valós idejű stratégia:</h2>
+                    (real time strategy, rövidítve RTS) valós időben zajlanak, a játékmenet folyamatos, az összes
+                    játékos
+                    bármikor adhat ki parancsokat, amelyek végrehajtása azonnal el is kezdődik. Az átlagos RTS-ekben a
+                    fő
+                    feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek
+                    irányítása.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>Valós idejű taktika</h2>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>Körökre osztott stratégia:</h2> Például: Civilization IV
+                    </p>
+                </li>
+            </ul>
             <p>
-            <h2>Valós idejű taktika</h2>
-            </p>
-        </li>
-        <li>
-            <p>
-            <h2>Körökre osztott stratégia:</h2> Például: Civilization IV
-            </p>
+            <ul>
         </li>
     </ul>
-    <p>
-    <h2>Menedzselős és szimulátor,</h2> „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz
-    hasonlító játéktípus. A játékosnak egy igen részletesen kidolgozott világot (emberekkel vagy kitalált lényekkel teli
-    konyhát, várost, bolygót, galaxist, kereskedelmi vállalatot stb.) kell irányítania. A fő cél nem a harc (sokszor
-    ellenfelek sincsenek), hanem hogy megfelelően irányítsa az alá rendelt, általában (a stratégiai játékoktól eltérően)
-    sok-sok, komplex módon összefüggő játékparaméterrel rendelkező világot, általában bizonyos, a készítők által
-    meghatározott célt elérve. Korai istenszimulátornak tekinthető a Civilization, valamint a Sierra tipikus
-    városszimulátor sorozata (Caesar sorozat, Pharaoh), illetve a Sim City sorozat.
-    </p>
-
-    <p>
-        A hardvertechnológia csak az 1990-es évek közepére kezdte megközelíteni azt a számítási teljesítményt, hogy egy
-        városnál bonyolultabb struktúrát (pl. részletesen kidolgozott fajok fejlődését egy galaxisban) is szimulálni
-        lehessen PC-n. Így a 2000-es években megjelent a műfaj újabb nemzedéke vagy altípusa, amelyekben fajok
-        fejlődését és terjeszkedését kell irányítani (Spore). A mesterséges életszimulációs játékoknak komoly szerepe
-        van az evolúcióbiológiai, matematikai és kognitív tudomány jellegű kutatásokban, bár az ott alkalmazott
-        szimulátorprogramok lényege nem a grafikus kidolgozottság, így nem feltétlenül tekinthetők „videójátékoknak”. A
-        leghíresebb példa John Conway rendkívül egyszerű megjelenésű (sejtautomata szimuláció) és szabályokra épülő
-        Életjátéka.
-    </p>
-
-    <p>
-    <h2>Logikai</h2>
-    („Puzzle”)
-    </p>
-
-    <p>
-    <h2>Szimulátor:</h2>
-    A játékosnak virtuális eszközöket, esetleg álltatokat (kecske) vagy dolgokat (kő) kell irányítania, amelynek azonban
-    létezik megfelelője a valóságban is. A hangsúly az adott dolog valós tulajdonságain, a minél hűbb modellezésen van.
+    <li>
+        <h2>Menedzselős és szimulátor,</h2>
+        <p>
+            „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz
+            hasonlító játéktípus. A játékosnak egy igen részletesen kidolgozott világot (emberekkel vagy kitalált
+            lényekkel teli
+            konyhát, várost, bolygót, galaxist, kereskedelmi vállalatot stb.) kell irányítania. A fő cél nem a harc
+            (sokszor
+            ellenfelek sincsenek), hanem hogy megfelelően irányítsa az alá rendelt, általában (a stratégiai
+            játékoktól eltérően)
+            sok-sok, komplex módon összefüggő játékparaméterrel rendelkező világot, általában bizonyos, a készítők
+            által
+            meghatározott célt elérve. Korai istenszimulátornak tekinthető a Civilization, valamint a Sierra tipikus
+            városszimulátor sorozata (Caesar sorozat, Pharaoh), illetve a Sim City sorozat.
+        </p>
+        <p>
+            A hardvertechnológia csak az 1990-es évek közepére kezdte megközelíteni azt a számítási teljesítményt,
+            hogy egy
+            városnál bonyolultabb struktúrát (pl. részletesen kidolgozott fajok fejlődését egy galaxisban) is
+            szimulálni
+            lehessen PC-n. Így a 2000-es években megjelent a műfaj újabb nemzedéke vagy altípusa, amelyekben fajok
+            fejlődését és terjeszkedését kell irányítani (Spore). A mesterséges életszimulációs játékoknak komoly
+            szerepe
+            van az evolúcióbiológiai, matematikai és kognitív tudomány jellegű kutatásokban, bár az ott alkalmazott
+            szimulátorprogramok lényege nem a grafikus kidolgozottság, így nem feltétlenül tekinthetők
+            „videójátékoknak”. A
+            leghíresebb példa John Conway rendkívül egyszerű megjelenésű (sejtautomata szimuláció) és szabályokra
+            épülő
+            Életjátéka.
+        </p>
+    </li>
+    </ul>
     </p>
 
     <ul>
         <li>
+
+            <h2>Logikai</h2>
             <p>
-            <h2>Autószimulátorok</h2>
-            </p>
-        </li>
-        <li>
-            <p>
-            <h2>Vasútszimulátorok</h2>
-            </p>
-        </li>
-        <li>
-            <p>
-            <h2>Repülőgép-szimulátorok</h2>
-            </p>
-        </li>
-        <li>
-            <p>
-            <h2>Tengeralattjáró-szimulátorok</h2>
+                („Puzzle”)
             </p>
         </li>
     </ul>
 
-    <p>
-    <h2>Menedzselős</h2>
-    </p>
+    <ul>
+        <li>
+            <h2>Szimulátor:</h2>
+            <p>
+                A játékosnak virtuális eszközöket, esetleg álltatokat (kecske) vagy dolgokat (kő) kell irányítania,
+                amelynek azonban
+                létezik megfelelője a valóságban is. A hangsúly az adott dolog valós tulajdonságain, a minél hűbb
+                modellezésen van.
+            </p>
+            <ul>
+                <li>
+                    <p>
+                    <h2>Autószimulátorok</h2>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>Vasútszimulátorok</h2>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>Repülőgép-szimulátorok</h2>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                    <h2>Tengeralattjáró-szimulátorok</h2>
+                    </p>
+                </li>
+            </ul>
+        </li>
+    </ul>
 
-    <p>
-    <h2>Sport</h2>
-    </p>
+    <ul>
+        <li>
+            <p>
+            <h2>Menedzselős</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Sport</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Lexikális tudás alapú</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Szerencsejáték</h2>
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2> Brawl </h2>
+            (verekedős játékok pl.: Mortal Kombat)
+            </p>
+        </li>
+        <li>
+            <p>
+            <h2>Táblajátékok:</h2> a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai.
+            Lehetnek
+            közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
+            </p>
+        </li>
+    </ul>
 
-    <p>
-    <h2>Lexikális tudás alapú</h2>
-    </p>
 
-    <p>
-    <h2>Szerencsejáték</h2>
-    </p>
 
-    <p>
-    <h2> Brawl </h2>
-    (verekedős játékok pl.: Mortal Kombat)
-    </p>
 
-    <p>
-    <h2>Táblajátékok:</h2> a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai. Lehetnek
-    közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
-    </p>
 
 </body>
 
