mufajok.html képek

--- a/mufajok.html
+++ b/mufajok.html
@@ -53,9 +53,7 @@
     <p>A műfaj megnevezésénél általában az angol rövidítését használják.</p>
     <ul>
         <li>
-            <p>
             <h2>Akció</h2>
-            </p>
             <ul>
                 <li>
                     <div class="li-elem">
@@ -89,42 +87,43 @@
                     <p>
                         Klasszikus, 2D-s megjelenítési módot használó játék.
                     </p>
+                    <img src="images/asd.jpg" alt="">
                 </li>
             </ul>
         </li>
     </ul>
     <ul>
         <li>
-            <p>
             <h2>Ügyességi</h2>
-            </p>
             <ul>
                 <li>
+                    <h2>Platformer:</h2>
                     <p>
-                    <h2>Platformer:</h2> az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és
+                    az irányított hősnek különböző akadályok (gyakran ellenfelek) legyőzésével és
                     platformok közti ugrálással / haladással kell eljutnia a pálya végéig. Az egyes pályák során
                     különböző
                     érméket, kincseket és egyéb gyűjtögetni valókat szedhetünk össze a magasabb pontszám érdekében.
                     </p>
+                    <img src="images/platformer.jpg" alt="">
                 </li>
             </ul>
             <ul>
                 <li>
-                    <p>
                     <h2>Kaland</h2>
+                    <p>
                     </p>
+                    <img src="images/adventure.jpg" alt="">
+                </li>
             </ul>
         </li>
     </ul>
     <ul>
         <li>
-            <p>
             <h2>Szerepjátékok</h2>
-            </p>
             <ul>
                 <li>
-                    <p>
                     <h2>MMORPG:</h2>
+                    <p>
                     (Massively Multiplayer Online Role-Playing Game – nagyon sok szereplős online szerepjáték)
                     interneten,
                     online játszható szerepjáték. Sok ezer ember játszik egyszerre egy 2D vagy 3D világban, képességeket
@@ -133,29 +132,29 @@
                     végtelen, de játékonként eltérő lehet. Legismertebbek a World of Warcraft, Lineage I/II, Guild Wars,
                     Roblox.
                     </p>
+                    <img src="images/MMORPG.jpg" alt="">
                 </li>
                 <li>
-                    <p>
                     <h2>RPG:</h2>
+                    <p>
                     (Role-Playing Game) Az MMORPG-hez hasonló játékelemekkel és játékmenettel rendelkezik, ám ezt
                     legtöbbször
                     egyedül játszhatjuk offline módban (Pl. The Witcher sorozat), de akad néhány olyan is, ahol pár
                     barátunkkal
                     vagy random emberrel együtt online vagy akár offline co-op módban (Pl. Diablo 3)
                     </p>
+                    <img src="images/diablo.jpg" alt="">
                 </li>
             </ul>
         </li>
     </ul>
     <ul>
         <li>
-            <p>
             <h2>Stratégiai játékok</h2>
-            </p>
             <ul>
                 <li>
-                    <p>
                     <h2>Valós idejű stratégia:</h2>
+                    <p>
                     (real time strategy, rövidítve RTS) valós időben zajlanak, a játékmenet folyamatos, az összes
                     játékos
                     bármikor adhat ki parancsokat, amelyek végrehajtása azonnal el is kezdődik. Az átlagos RTS-ekben a
@@ -163,23 +162,24 @@
                     feladatok az erőforrások összegyűjtése, bázisok építése, technológia fejlesztése és az egységek
                     irányítása.
                     </p>
+                    <img src="images/RTS.JPG" alt="">
                 </li>
                 <li>
-                    <p>
                     <h2>Valós idejű taktika</h2>
-                    </p>
+                    <img src="images/valosideju.jpg" alt="">
                 </li>
                 <li>
+                    <h2>Körökre osztott stratégia:</h2>
                     <p>
-                    <h2>Körökre osztott stratégia:</h2> Például: Civilization IV
+                    Például: Civilization IV
                     </p>
+                    <img src="images/korokreosztott.jpg" alt="">
                 </li>
             </ul>
-            <p>
-            <ul>
         </li>
     </ul>
-    <li>
+    <ul>
+        <li>
         <h2>Menedzselős és szimulátor,</h2>
         <p>
             „Istenszimulátor”, városszimulátor: A valós idejű stratégiai játékokhoz
@@ -194,6 +194,7 @@
             meghatározott célt elérve. Korai istenszimulátornak tekinthető a Civilization, valamint a Sierra tipikus
             városszimulátor sorozata (Caesar sorozat, Pharaoh), illetve a Sim City sorozat.
         </p>
+        <img src="images/menedzselos.jpg" alt="">
         <p>
             A hardvertechnológia csak az 1990-es évek közepére kezdte megközelíteni azt a számítási teljesítményt,
             hogy egy
@@ -209,10 +210,8 @@
             épülő
             Életjátéka.
         </p>
-    </li>
+        </li>
     </ul>
-    </p>
-
     <ul>
         <li>
 
@@ -234,24 +233,19 @@
             </p>
             <ul>
                 <li>
-                    <p>
                     <h2>Autószimulátorok</h2>
-                    </p>
+                    <img src="images/autovezetoszim.jpg" alt="">
                 </li>
                 <li>
-                    <p>
                     <h2>Vasútszimulátorok</h2>
-                    </p>
+                    <img src="images/vasutszim.jpg" alt="">
                 </li>
                 <li>
-                    <p>
                     <h2>Repülőgép-szimulátorok</h2>
-                    </p>
+                    <img src="images/repuloszim.jpg" alt="">
                 </li>
                 <li>
-                    <p>
                     <h2>Tengeralattjáró-szimulátorok</h2>
-                    </p>
                 </li>
             </ul>
         </li>
@@ -259,34 +253,22 @@
 
     <ul>
         <li>
-            <p>
-            <h2>Menedzselős</h2>
-            </p>
-        </li>
-        <li>
-            <p>
             <h2>Sport</h2>
-            </p>
         </li>
         <li>
-            <p>
             <h2>Lexikális tudás alapú</h2>
-            </p>
         </li>
         <li>
-            <p>
             <h2>Szerencsejáték</h2>
-            </p>
         </li>
         <li>
-            <p>
             <h2> Brawl </h2>
             (verekedős játékok pl.: Mortal Kombat)
-            </p>
         </li>
         <li>
+            <h2>Táblajátékok:</h2>
             <p>
-            <h2>Táblajátékok:</h2> a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai.
+            a valóságban is játszható játékok, mint a sakk, dáma elektronikus változatai.
             Lehetnek
             közelvalóságszerűek, vagy speciális effektekkel attól elrugaszkodottak (pl. animált, szétmálló bábuk).
             </p>
