néhány oldalamra a navbar beszúrása

--- a/sikeres.html
+++ b/sikeres.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>Mindenidők legsikeresebb játékai</p>
+    <div id="topnav">
+        <a href="index.html">Kezdőlap</a>
+        <a href="mufajok.html">Műfajok</a>
+        <a href="onlinejatekok.html">Online játékok</a>
+        <a href="sikeres.html">Sikeres játékok</a>
+        <a href="speedrunok.html">Speedrunok</a>
+        <a href="videojatekok.html">Videójátékok</a>
+    </div>
+    <h1>Mindenidők legsikeresebb játékai</h1>
     
         
             <div class="legsikeresebbkep">
@@ -101,7 +109,7 @@
                             <tr>
                                 <td>Eladott játékok száma
                                 </td>
-                                <td>45.33 millió db</td>
+                                <td>45 millió db</td>
                             </tr>
                             <tr>
                                 <td>Kiadás dátuma</td>
