--- a/speedrunok.html
+++ b/speedrunok.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <p>Speedrunok</p>
+    <div id="topnav">
+        <a href="index.html">Kezdőlap</a>
+        <a href="mufajok.html">Műfajok</a>
+        <a href="onlinejatekok.html">Online játékok</a>
+        <a href="sikeres.html">Sikeres játékok</a>
+        <a href="speedrunok.html">Speedrunok</a>
+        <a href="videojatekok.html">Videójátékok</a>
+    </div>
+    <h1>Speedrunok</h1>
     <h1>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</h1>
 <div>
+    <iframe style="float:right" src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0" frameborder="1"  height="100%"></iframe>
     <ul>A leghíresebb speedrunoló játékok
         <li>Portal</li>
         <li>Super Mario Széria</li>
@@ -20,7 +29,6 @@
         <li>Cuphead</li>
         <li>Quake</li>
         <li>Resident Evil Széria</li>
-        <iframe src="https://www.youtube.com/embed/Gum4GI2Jr0s?controls=0" frameborder="1"  height="100%"></iframe>
     </div>
 </ul>
 </body>
