képe és navbar szerkesztése

--- a/sikeres.html
+++ b/sikeres.html
@@ -12,7 +12,7 @@
         <a href="index.html">Kezdőlap</a>
         <a href="mufajok.html">Műfajok</a>
         <a href="onlinejatekok.html">Online játékok</a>
-        <a href="sikeres.html">Sikeres játékok</a>
+        <a href="jatek_tortenet.html">Játék történet</a>
         <a href="speedrunok.html">Speedrunok</a>
         <a href="videojatekok.html">Videójátékok</a>
     </div>
