--- a/speedrunok.html
+++ b/speedrunok.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+ 
     <div id="topnav">
         <a href="index.html">Kezdőlap</a>
         <a href="mufajok.html">Műfajok</a>
         <a href="onlinejatekok.html">Online játékok</a>
         <a href="sikeres.html">Sikeres játékok</a>
-        <a href="speedrunok.html">Speedrunok</a>
+        <a href="jatek_tortenet.html">Történet</a>
         <a href="videojatekok.html">Videójátékok</a>
     </div>
+    <hr>
     <h1>Speedrunok</h1>
     <h1>A speedrunolás teknikája már az első híresebb videójátékok megjelenése óta jelen van,célja hogy a játékos különféle exploitok és taktikák,illetve glitchek segítségével gyorsabban kijátssza az adott játékot vagy játékszakaszt. Ez időre megy, és gyakran versenyeket is rendeznek belőle.</h1>
 <div>
