navbar + css változtatások

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="header">
             <h1 class="focim"><a href="index.html"><span>J</span></a>átékok</h1>
             <div id="topnav">
-                <a href="index.html">Kezdőlap</a>
+                <a href="jatek_tortenet.html">Történet</a>
                 <a href="mufajok.html">Műfajok</a>
                 <a href="onlinejatekok.html">Online játékok</a>
                 <a href="sikeres.html">Sikeres játékok</a>
