--- a/onlinejatekok.html
+++ b/onlinejatekok.html
@@ -11,7 +11,7 @@
     <div id="topnav">
         <a href="index.html">Kezdőlap</a>
         <a href="mufajok.html">Műfajok</a>
-        <a href="onlinejatekok.html">Online játékok</a>
+        <a href="onlinejatekok.html">Játék történet</a>
         <a href="sikeres.html">Sikeres játékok</a>
         <a href="speedrunok.html">Speedrunok</a>
         <a href="videojatekok.html">Videójátékok</a>
