--- a/videojatekok.html
+++ b/videojatekok.html
@@ -14,7 +14,7 @@
         <a href="onlinejatekok.html">Online játékok</a>
         <a href="sikeres.html">Sikeres játékok</a>
         <a href="speedrunok.html">Speedrunok</a>
-        <a href="videojatekok.html">Videójátékok</a>
+        <a href="jatek_tortenet.html">Történet</a>
     </div>
 </body>
 </html>
